Added cname hosting

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
     <title>REHOBOTH.ME</title>
 </head>
 <body>
-    <h1>Welcome to <a href="https://rehoboth.me">Rehoboth's Site</a></h1>
+    <h1>Welcome to <a href="/">Rehoboth's Site</a></h1>
 </body>
