Changes: 	Added a style sheet

--- a/index.html
+++ b/index.html
@@ -2,5 +2,15 @@
     <title>REHOBOTH.ME</title>
 </head>
 <body>
-    <h1>Welcome to <a href="/">Rehoboth's Site</a></h1>
+    <h1 class="text-center">Welcome to <a href="/">Rehoboth's Site</a></h1>
+    <p>
+        <em>Fact About Me</em>
+        <ol>
+            <li>I am a junior at Dartmouth College</li>
+            <li>I am a computer science major</li>
+            <li>I only recently started linking sea food</li>
+            <li>I always taught pepperoni was a vegetable</li>
+            <li>I like reading progression fictions</li>
+        </ol>
+    </p>
 </body>
