added more html and some styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <head>
     <title>REHOBOTH.ME</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="text-center">Welcome to <a href="/">Rehoboth's Site</a></h1>
+    <h1 class="text-center" style="position: relative; width: 100%; background-color: brown;">Welcome to <a href="/">Rehoboth's Site</a></h1>
     <p>
-        <em>Fact About Me</em>
+        <strong><em>Facts About Me</em></strong>
         <ol>
             <li>I am a junior at Dartmouth College</li>
             <li>I am a computer science major</li>
